--- a/src/css/App.css
+++ b/src/css/App.css
@@ -163,7 +163,7 @@ body, html {
   height: 20px;
 }
 .infoEnText{
-  font-family: fantasy;
+  font-family: Papyrus;
   position: fixed;
   left: 8%;
   top: 30%;
