--- a/src/css/App.css
+++ b/src/css/App.css
@@ -149,11 +149,13 @@ body, html {
 }
 .enInfoTitle{
   position: fixed;
-  left: 4%;
-  top: 21%;
+  left: 3%;
+  top: 24%;
+  height: 93px;
+  width: 505px;
 }
 .frontPageEnTitle{
-  margin-left: 21%;
+  margin-left: 19%;
   margin-bottom: 0%;
 }
 .frontPageUnderline{
@@ -273,4 +275,6 @@ body, html {
 }
 .margin-add-right{
   margin-right: 15px;
+  }.activeCross{
+    box-shadow: 5px 4px 11px 0px rgba(0,0,0,0.78);
   }
