--- a/src/css/App.css
+++ b/src/css/App.css
@@ -270,11 +270,23 @@ body, html {
 .text-box-heb{
   direction: rtl;
 }
-.margin-add-left{
-  margin-left: 15px;
+.timeline-box-style{
+
+font-family: titleFont;
+}
+.margins-timeline-text{
+  margin-top: 7px;
+  margin-left: 7px;
+  font-size: 19px;
 }
 .margin-add-right{
-  margin-right: 15px;
-  }.activeCross{
+  font-family: titleFont;
+}
+.activeCross{
     box-shadow: 5px 4px 11px 0px rgba(0,0,0,0.78);
-  }
+}
+.timeline-title-style{
+  font-size: 27px;
+  font-family: titleFont;
+  margin-left: 7px;
+}
